# UMDFP

./: .gitignore  README.md  UMDBabel.h  UMDFP.h  UMDcompressor.cpp  UMFParser.cpp  UMFTests.ipynb
rdkit_src/: CMakeLists.txt  README.md  autobuild.sh  patch_elf.sh
rdkit_src/src/: RDKitInterface.hpp  SimilarityQuery.cpp  TestInterface.cpp
src/: Makefile  SearchableFP.h  UMDBabel.h  UMDFP.h  UMDcompressor.cpp  UMFChecker.cpp  UMFDumper.cpp  UMFHelpers.h  UMFParser.cpp  UMFQuery.cpp  smiles2umd  umfchecker  umfparser-live
